syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/timestamp.proto";

package com.lightbend.farmtrust.farmitem.domain;

option java_outer_classname = "FarmItemDomain";


option (akkaserverless.file).value_entity = {
    name: "FarmItem"
    entity_type: "farmitem"
    state: "FarmItemState"
};

message FarmItemState {
    string item_id = 1 ;
    string farm_land_id = 2;
    int32 cycle_number = 3;
    string farmer_name = 4;
    string crop_name = 5;
    string logFromFarm = 6;
    string itemStatus = 7;
    string boughtByUser = 8;
    double userRating = 9;
}